# cmake_vs_2017_problems

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
gen_inputs/: CMakeLists.txt
gen_inputs/a_lib/: test_lib.cpp  test_lib.cpp.gensrc  test_lib.hpp  test_lib.hpp.gensrc
gen_inputs/b_lib/: test_lib.cpp  test_lib.cpp.gensrc  test_lib.hpp  test_lib.hpp.gensrc
gen_inputs/c_lib/: gen.cmake  test_lib.cpp  test_lib.cpp.gensrc  test_lib.hpp  test_lib.hpp.gensrc
generator/: CMakeLists.txt
generator/src/: CMakeLists.txt  generator.bat
generator/test/: CMakeLists.txt  run_test.bat.in
generator/test/3rd/: main.cpp  test.cmake
generator/test/first/: main.cpp  test.cmake
generator/test/second/: main.cpp  test.cmake
libs/: CmakeLists.txt
libs/2nd_lib/: CmakeLists.txt  second_lib.cpp  second_lib.h
libs/first_lib/: CmakeLists.txt  first_lib.h  fist_lib.cpp  fist_lib.h
